@@ -1,5 +1,10 @@
 2010-08-03  Andreas Kupries  <andreask@activestate.com>
 
+	* tests/var.test (var-19.1): [Bug 3037525]: Added test
+	demonstrating the local hashtable deletion crash and fix.
+
+2010-08-03  Andreas Kupries  <andreask@activestate.com>
+
 	* tests/info.test (info-39.1, test_info_frame): Changed absolute
 	to relative frame adressing to handle difference between testing
 	with -singleproc 1 vs. the default -singleproc 0. Plus comment
